--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-/* Import Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Allura&family=Questrial&display=swap');
+/* Import Google Fonts 
+@import url('https://fonts.googleapis.com/css2?family=Allura&family=Questrial&display=swap'); */
 
 :root {
   /* fonts variables */
