--- a/css/small.css
+++ b/css/small.css
@@ -21,6 +21,16 @@ font-family: 'Questrial', sans-serif; */
   --accent2: #112d4e;
 }
 
+section {
+    border-style: solid;
+    border-width: 5px;
+    border-color: var(--color2);
+    background-color: var(--accent1);
+    color: var(--color1);
+    padding: 0 1em;
+    font-family: var(--alt-font);
+  }
+
 body {
     background-color: var(--color2);
     max-width: 750px;
@@ -77,3 +87,4 @@ footer {
     padding: 10px;
     font-size: .8em;
 }
+
