--- a/css/medium.css
+++ b/css/medium.css
@@ -1,3 +1,5 @@
+/*** CSS FOR TABLET VIEW ***/
+
 @media only screen and (min-width: 32.5em) {
   .mH_h1_name {
     font-size: 2.8em;
@@ -10,13 +12,46 @@
   .mH_img {
     border: 8px solid var(--color2);
     border-radius: 10px;
-    float:right;
-    width:initial;
-}
+    float: right;
+    width: initial;
+  }
 
   header,
   footer {
     border-radius: 15px;
   }
 
+  .tres {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 900px;
+  }
+
+  .tres h2 {
+    text-align: center;
+  }
+
+  .sec1 {
+    grid-column: 1;
+  }
+
+  .sec2 {
+    grid-column: 2;
+  }
+
+  .sec3 {
+    grid-column: span 2;
+  }
+
+  h1 {
+    font-size: 2.5em;
+  }
+
+  h2 {
+    font-size: 1.5em;
+  }
+
+  p {
+    font-size: 1.2em;
+  }
 }
