--- a/css/small.css
+++ b/css/small.css
@@ -102,7 +102,7 @@ section {
   background-color: var(--accent1);
   color: var(--color1);
   padding: .5em;
-  border: .5em
+  border: .5em;
   font-family: var(--alt-font);
 }
 
