--- a/css/large.css
+++ b/css/large.css
@@ -16,22 +16,23 @@
   .tres {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    max-width: 900px;;
   }
 
   .sec1 {
-    grid-column: 1;
+    grid-column: 1/2;
     padding: 1em;
     margin: 0.5em;
   }
 
   .sec2 {
-    grid-column: 2;
+    grid-column: 2/3;
     padding: 1em;
     margin: 0.5em;
   }
 
   .sec3 {
-    grid-column: 3;
+    grid-column: 3/4;
     padding: 1em;
     margin: 0.5em;
   }
