--- a/css/medium.css
+++ b/css/medium.css
@@ -32,11 +32,11 @@
   }
 
   .sec1 {
-    grid-column: 1;
+    grid-column: 1/2;
   }
 
   .sec2 {
-    grid-column: 2;
+    grid-column: 2/3;
   }
 
   .sec3 {
