--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -22,6 +22,8 @@ header, nav, main, footer {
     margin: 0 auto;
 }
 
+
+
 header {
     color: var(--color2);
     display:flex;
@@ -37,10 +39,10 @@ header section {
     padding: 1em;
 }
 
-.l3DivLogo img {
+.l4DivLogo img {
     border: 2px solid black);
     border-radius: 30px 30px 30px 0;
-  }
+}
 
   h1, h2, h3, h4, h5, h6 {
       font-family: var(--head-font);
@@ -81,6 +83,29 @@ header section {
       background-color: var(--color2);
   }
 
-  nav ul.hide {
+nav ul.hide {
       display:none;
+  } 
+
+.imgPreston {
+    align-content: center;
+}
+
+.contentBox {
+    background-color: var(--accent1);
+    color: var(--color1);
+    padding: 12px;
+    margin: 10px auto;
+    display: block;
+    border-radius: 20px 20px 20px 0;
+}
+
+  footer {
+      text-align: center;
+  }
+  /*** Clearfix. Force an element not to collapse ***/
+  .clearfix:after {
+      content: "";
+      display: table;
+      clear: both;
   }
