--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -1,16 +1,168 @@
+/***** Initial variables ***/
+:root {
+    /* fonts variables */
+    --head-font: "Noto Serif", serif;
+    --body-font: "Lato", sans-serif;
+  
+    /* Site colors */
+    --color1: #d8f3dc;
+    --color2: #95d5b2;
+    --color3: #52b788;
+    --accent1: #2d6a4f;
+    --accent2: #081c15;
+  }
+
+/*** Header and Body styles ***/  
 body {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 1rem;
-    justify-items: center;
+    font-family: var(--body-font);
+    font-size: 16px;
+    background-color: var(--color1);
+}
+
+header, nav, main, footer {
+    max-width: 760px;
+    margin: 0 auto;
+}
+
+
+
+header {
+    color: var(--color2);
+    display:flex;
+    align-content: center;
     align-items: center;
+    justify-content: center;
+    padding: 1em;
+    background-color: var(--accent2);
+    border-radius: 30px 30px 30px 0;
+}
+
+header section {
+    padding: 1em;
+}
+
+.l4DivLogo img {
+    border: 2px solid black);
+    border-radius: 30px 30px 30px 0;
+}
+
+  h1, h2, h3, h4, h5, h6 {
+      font-family: var(--head-font);
+  }
+
+  aside.announcement {
+    background-color: var(--color1);
+    color: var(--accent1);
+    padding: .3em;
+    margin-top: 0;
+    margin: 1em;
+    text-align: center;
+  }
+
+  aside#pancakes.announcement.hide {
+    display: none;
+  }
+  
+/*** Navigation styles ***/
+  nav {
+      background-color: var(--accent1);
+      border-radius: 30px 30px 30px 0;
+  }
+
+  nav button {
+      margin: .3rem 5%;
+      background-color: transparent;
+      border: none;
+      font-size: 1.6rem;
+      color: var(--accent2)
+  }
+
+  nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+  }
+
+  nav ul li a {
+      display: block;
+      text-decoration: none;
+      padding: 0.8rem 2%;
+      color: var(--color2);
+  }
+
+  nav ul li.active a {
+      background-color: var(--accent2);
+  }
+
+  nav ul li a:hover {
+      color: var(--accent2);
+      background-color: var(--color2);
+  }
+
+nav ul.hide {
+      display:none;
+  } 
+
+/*** Main styles ***/
+div img[data-src] {
+    filter: blur(5px);
+}
+
+div img {
+    filter: blur(0px);
+    transition: filter 0.5s;
+}
+
+main {
+    text-align: center;
+}
+
+main h2 {
+    font-size: 2.5rem;
+}
+
+gImgcontainer {
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    transition: 1s;
+}
+
+figure:nth-child(n) {
+    margin: 15px;
+}
+
+figure:hover:nth-child(n) {
+    box-shadow: 0px 4px 8px 0 gray;
+    transform: scale(1.05);
 }
 
 img {
-    filter: blur(0rem);
-    transition: filter .5s;
+    max-width: 100%;
 }
 
-img:hover {
-    box-shadow: 1px 1px 10 px lightgreen;
+figcaption {
+    font-size: 1em;
 }
+
+/*** Footer styles ***/
+  footer {
+      text-align: center;
+  }
+
+  .smicon {
+    width: 30px;
+    padding: 5px;
+  }
+  
+  iframe {
+    display: none;
+  }
+  
+  /*** Clearfix. Force an element not to collapse ***/
+  .clearfix:after {
+      content: "";
+      display: table;
+      clear: both;
+  }
