--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -57,3 +57,16 @@ footer{
     text-align: center;
     padding: 2rem;
 }
+
+@media only screen and (min-width: 35rem) {
+    .cards{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media only screen and (min-width: 64rem) {
+    .cards{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
