--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -20,7 +20,7 @@ body {
 }
 
 header, nav, main, footer {
-    max-width: 760px;
+    max-width: 960px;
     margin: 0 auto;
 }
 
@@ -107,11 +107,11 @@ nav ul.hide {
 div.town_div {
   display: block;
   margin: auto;
-  padding: 2%;
+  padding: 3%;
 }
 
 img.townimg{
-  width: 96%;
+  width: 95%;
   padding: 2%;
   max-width: 400px;
 }
@@ -136,19 +136,24 @@ section.home_hide {
   text-align: center;
   background-color: var(--color2);
   border-radius: 10px;
-  padding: 10px;
-  margin-top: 1rem;
+  padding: 3%;
+  margin: 3%
 }
 
 #winter {
   margin: 1rem auto;
-  width: 50%;
+  width: 95%;
   max-width: 250px;
   box-shadow: 0 0 20px var(--accent2);
 }
 
 /*** Footer styles ***/
-  footer {
+div#mapdiv {
+  color: #2a3640;
+  text-align: center;
+}  
+
+footer {
       text-align: center;
   }
 
